--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-black==22.12.0
-catboost==1.1.1
-flake8==5.0.4
-hydra-core==1.3.1
-ipykernel==6.16.2
-kaggle==1.5.12
-lightgbm==3.3.4
-matplotlib==3.5.3
-numpy==1.21.6
-pandas==1.3.5
-plotly==5.12.0
-scikit-learn==1.0.2
-scipy==1.7.3
-seaborn==0.12.2
+black
+catboost
+flake8
+hydra-core
+ipykernel
+kaggle
+lightgbm
+matplotlib
+numpy
+pandas
+plotly
+prettytable
+scikit-learn
+seaborn
 torch==1.13.1
 torchaudio==0.13.1
 torchvision==0.14.1
-tqdm==4.64.1
-xgboost==1.6.2
+tqdm
+xgboost
