--- a/.gitignore
+++ b/.gitignore
@@ -127,11 +127,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-bike-sharing/input/*
-bike-sharing/res/*
-bike-sharing/output/*
 .vscode/*
-adult-income-prediction/input/*
-adult-income-prediction/res/*
-adult-income-prediction/output/*
-adult-income-prediction/.vscode/*
+input/*
+res/*
+output/*
